<resources>
    <string name="app_name">Amer Souq</string>
    <string name="FACEBOOK_APP_ID">415466542556387</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">394516b0d2bdcea921e2fff88cedd6c8</string>
    <string name="otp_text">Enter Four Digit One Time Password Sent to your Mobile Number</string>
    <string name="search">Search...</string>
    <string name="select_language">Select Language</string>
    <string name="arabic">ARABIC</string>
    <string name="english">ENGLISH</string>
    <string name="submit">Submit</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="live_auction">Live Auction</string>
    <string name="categories">Categories</string>
    <string name="featured_ads">Featured Ads</string>
    <string name="amer_souq_colletions">Amer Souq Colletions</string>
    <string name="login">Login</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="one_time_password">One Time Password?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in_as_guest">Sign in as guest</string>
    <string name="sign_up">Sign Up</string>
    <string name="name_of_user">Name of user</string>
    <string name="email_id">Email ID</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="address">Address</string>
    <string name="Rs">\u20B9</string>
    <string name="gender">Gender</string>
    <string name="alternate_mobile">Alternate Number</string>
    <string name="auctions">Auctions</string>
    <string name="title_activity_create_adpage">CreateAdpage</string>
    <string name="ad_title">Ad Title</string>
    <string name="ad_desc">Ad Description</string>
    <string name="ad_location">Location</string>
    <string name="choose_language">Choose Language</string>
    <string name="short_desc">Short Description</string>
    <string name="ad_fulldesc">Full Description</string>
    <string name="category">Category</string>
    <string name="dummy_short_desc">Redux Analogue Brown Dial Men\'s and Boy\'s Watch RWS0200S</string>
    <string name="dummy_full_desc">Lorem Ipsum is a placeholder text that has been used in the print and typesetting industry in place of actual text. The idea behind it was to eliminate distractions while working on page layouts and still having some form of text available to lay out the pages properly.

Although it was primarily used in graphic design, since the birth of the web Lorem Ipsum has found a home in web design as well, where designers often use it while mocking up client websites instead of actual content.</string>
    <string name="product_title">Product Title</string>
    <string name="text_card_page">Enter your credit/debit card details. We\'ll save this card so that you can use it again later</string>
    <string name="tab_orders">ORDERS</string>
    <string name="tab_request">CUSTOMER REQUEST</string>
    <string name="mrp">M.R.P. :</string>
    <string name="deal_price">Deal Price :</string>
    <string name="buy_now">Buy Now</string>
    <string name="save_amnt">You Save :</string>
    <string name="available_qty">Quantity Available</string>
    <string name="quantity">Quantity</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="sub_category">Sub Category</string>
    <string name="location">Location</string>
    <string name="visible_to_guest_user">Visible to Guest User</string>
    <string name="wish_list">Wish list</string>
    <string name="notification">Notification</string>
    <string name="featured">Featured</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="lois_caron_lcs_8075_blue_dial_day_date_functioning_watch"><![CDATA[Lois Caron LCS-8075 BLUE DIAL DAY & DATE FUNCTIONING WATCH]]></string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="subtotal">Sub Total</string>
    <string name="delivery">Delivery Fee</string>
    <string name="total">Total</string>
    <string name="confirmation">Confirmation</string>
    <string name="signup_with_otp"><u>SignUp with OTP</u></string>
    <string name="name_of_user_optional">Name of user ( Optional )</string>
    <string name="email_id_optional">Email Id ( Optional )</string>
</resources>
