<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgm"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/logo_imgvw"
        android:layout_width="@dimen/_85sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_30sdp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/logo_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_imgvw"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center_horizontal"
        android:text="@string/login"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_26sdp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/logo_txt">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/_10sdp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="@dimen/_240sdp"
                android:layout_height="wrap_content">

                <com.hbb20.CountryCodePicker
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:id="@+id/ccp"
                    app:ccpDialog_showFlag="false"
                    android:layout_centerVertical="true"
                    >

                </com.hbb20.CountryCodePicker>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_phone"
                    app:passwordToggleEnabled="true"
                    android:layout_width="@dimen/_200sdp"
                    app:hintAnimationEnabled="true"
                    android:textColorHint="@color/colorPrimary"
                    app:passwordToggleTint="@color/colorPrimary"
                    android:layout_toRightOf="@id/ccp"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:hintEnabled="true"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/input_mobile"
                        android:textColorHint="@color/colorPrimary"
                        android:textColor="@color/colorPrimary"
                        android:backgroundTint="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile_number"
                        android:maxLines="1"
                        android:textSize="@dimen/_12sdp"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"

                android:layout_width="@dimen/_240sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColorHint="@color/colorPrimary"
                app:passwordToggleTint="@color/colorPrimary"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:text="rakesh.123"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="@dimen/_12sdp" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="@dimen/_220sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/button_effect_theme"
                android:gravity="center"
                android:text="@string/login"
                android:id="@+id/login_btn"
                android:textColor="#ffffff"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/one_time_password"
                android:id="@+id/input_otp"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:id="@+id/forget_password"
                android:textColor="@color/colorPrimary" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@color/black"
                android:gravity="center" />


            <TextView
                android:layout_width="@dimen/_220sdp"
                android:id="@+id/sign_guest_btn"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_25sdp"
                android:background="@drawable/button_effect_theme"
                android:gravity="center"
                android:text="@string/sign_in_as_guest"
                android:textColor="#ffffff"
                android:textSize="@dimen/_14ssp" />


            <TextView
                android:id="@+id/sign_up_td"
                android:layout_width="@dimen/_220sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/button_effect_theme"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="#ffffff"
                android:textSize="@dimen/_14ssp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
