<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_grey"
    tools:context=".activities.ProductList.ProductListActivityNew">

    <include layout="@layout/toolbar_search"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@color/white"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:drawableStart="@drawable/ic_featured"
            android:text="@string/featured" />

        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:background="@color/colorAccent"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:drawableStart="@drawable/ic_sort"
            android:text="@string/sort" />
        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:background="@color/colorAccent"
           />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:gravity="center"
            android:drawableStart="@drawable/ic_filter"
            android:text="@string/filter" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/product_recyclerview"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_height="wrap_content" />
</LinearLayout>